Alignment issue

--- a/default.css
+++ b/default.css
@@ -27,3 +27,6 @@ div.links {
 .vert-align {
 	vertical-align: middle;
 }
+.post {
+	padding-left: 50px
+}
